--- a/TODO
+++ b/TODO
@@ -85,3 +85,7 @@
 - CRT and gcdext:
     = Math::Pari compare chinese
     = better chinese testing: high bits, negative
+
+- Have get_prime_segment take the "high" value that will be used, so it
+  can decide to use larger segments.  The 256k segment is just too small
+  when using large bases.
