--- a/Changes
+++ b/Changes
@@ -7,12 +7,18 @@ Revision history for Perl module Math::Prime::Util
 
     - foroddcomposites    like forcomposites, but skips even numbers
 
+    [REMOVED DEPRECATED NAMES]
+
+    - all_factors         replaced in 0.36 by divisors
+    - miller_rabin        replaced in 0.10 by is_strong_pseudoprime
+
     [FUNCTIONALITY AND PERFORMANCE]
 
     - Divisors sorted with qsort instead of Shell sort.  No appreciable time
       difference, but slightly less code size.
 
-    - Added Micali-Schnorr generator to examples/csrand.pl.
+    - Added Micali-Schnorr generator to examples/csrand.pl.  Made a version
+      of csrand that uses Math::GMP for faster operation.
 
     - Added synopsis release test.  Thanks to Neil Bowers and Toby Inkster.
 
