PP versions of forcomb and forperm

--- a/TODO
+++ b/TODO
@@ -91,8 +91,6 @@
   See: http://joye.site88.net/papers/JQ96lucas.pdf to make sure we're being
   efficient.
 
-- tests for forcomb.  write _generic_forcomb.  Same for forperm.
-- is numtoperm a better idea?
-- permutation ordering isn't lexicographic
+- tests for forcomb and forperm
 
 - Simple test for ntheory alias
