--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@ Revision history for Perl module Math::Prime::Util
 
     - forcomb { ... } n, k    combinations iterator
     - forperm { ... } n       permutations iterator
+    - factorial(n)            n!
 
     [FUNCTIONALITY AND PERFORMANCE]
 
