Redo PP forcomb loop, PP code returns one empty array for k=0.

--- a/TODO
+++ b/TODO
@@ -92,3 +92,5 @@
   efficient.
 
 - Simple test for ntheory alias
+
+- combinations n,0 and permutations 0 should get called with the empty argument
