--- a/Changes
+++ b/Changes
@@ -5,10 +5,11 @@ Revision history for Perl module Math::Prime::Util
 
     [ADDED]
 
-    - forcomb { ... } n, k    combinations iterator
-    - forperm { ... } n       permutations iterator
-    - factorial(n)            n!
-    - is_bpsw_prime(n)        primality test with no pretests, just ES BPSW
+    - forcomb { ... } n, k      combinations iterator
+    - forperm { ... } n         permutations iterator
+    - factorial(n)              n!
+    - is_bpsw_prime(n)          primality test with no pretests, just ES BPSW
+    - is_frobenius_pseudoprime  Frobenius x^2-x-1 primality test
 
     [FUNCTIONALITY AND PERFORMANCE]
 
