Fix XS call-through for Frobenius

--- a/TODO
+++ b/TODO
@@ -93,4 +93,4 @@
 
 - consider using Ramanujan Li for PP code.
 
-- Tests and documentation for is_frobenius_pseudoprime
+- Tests, documentation, PP code for is_frobenius_pseudoprime
