Add PP Perrin and Frobenius primality tests

--- a/TODO
+++ b/TODO
@@ -93,8 +93,6 @@
 
 - consider using Ramanujan Li for PP code.
 
-- Tests, PP code for is_frobenius_pseudoprime
-- Tests, PP code for is_perrin_pseudoprime
+- Tests for is_frobenius_pseudoprime
+- Tests for is_perrin_pseudoprime
 - Tests for LambertW
-
-- Complete LambertW
