--- a/Changes
+++ b/Changes
@@ -9,7 +9,8 @@ Revision history for Perl module Math::Prime::Util
     - forperm { ... } n         permutations iterator
     - factorial(n)              n!
     - is_bpsw_prime(n)          primality test with no pretests, just ES BPSW
-    - is_frobenius_pseudoprime  Frobenius x^2-x-1 primality test
+    - is_frobenius_pseudoprime  Frobenius quadratic primality test
+    - is_perrin_pseudoprime     Perrin primality test (unrestricted)
     - LambertW(k)               Solves for W in k = W*exp(W)
 
     [FUNCTIONALITY AND PERFORMANCE]
