--- a/Changes
+++ b/Changes
@@ -11,12 +11,18 @@ Revision history for Perl module Math::Prime::Util
 
     - Add example for verifying prime gaps, similar to Nicely's cglp4.
 
-    - PP updates.
-       - Large speedup for PP divisors for bigints in 64-100 bit range.
-       - Revamp RiemannZeta.  Fixes some bignum output, but requires RT fixes.
-       - Optimization for PP comparison to ~0.
-       - PP factoring is a bit faster, especially for small inputs (something
-         only used when XS disabled).
+    - Improve test coverage.
+
+    [PP Updates]
+
+    - Large speedup for divisors with bigints in 64-100 bit range.
+
+    - Revamp RiemannZeta.  Fixes some bignum output, but requires RT fixes.
+
+    - Optimization for PP comparison to ~0.
+
+    - PP factoring is a bit faster, especially for small inputs (something
+      only used when XS disabled).
 
 
 0.45  2014-09-26
