--- a/TODO
+++ b/TODO
@@ -73,7 +73,7 @@
   to speed it up using some ideas from the Ohana 2011 SAGE branch.  For example
   (10**13,10**5) takes 2.5x longer, albeit with 6x less memory.
 
-- More Pari:  parforprime, vecmin, vecmax
+- More Pari:  parforprime
 
 - is_power should take a third argument that gets set to the root
 
@@ -90,9 +90,6 @@
 
 - xt/pari-compare:  add chinese, factorial, vecmin, vecmax,
                         bernfrac, bernreal, LambertW.
-
-- reduce:  vecreduce, vecfold, fold, reduce.  Probably make this identical
-  to List::Util::reduce for portability ease.
 
 - In vecsum, we could create the string and call vecsum with 1 argument.  The
   trick is telling vecsum we only want one thing.  Idea:
