--- a/Changes
+++ b/Changes
@@ -6,6 +6,10 @@ Revision history for Perl module Math::Prime::Util
     - NetBSD improperly exports symbols in string.h, including popcount.
       Rename our internal function to work around it.
 
+    - is_power now takes an optional scalar reference third argument which
+      will be set to the root if found.
+
+
 0.46  2014-10-21
 
     [API Changes]
