--- a/Changes
+++ b/Changes
@@ -16,7 +16,9 @@ Revision history for Perl module Math::Prime::Util
     - next_prime and prev_prime, for bigints, call GMP directly then a root
       PP function to convert to a Math::BigInt.  Much less overhead.
 
-    - lucas_sequence goes from PP->[XS,GMP,PP] to XS[->PP[->GMP]].
+    - Changes to trim a little memory use.  lucas_sequence goes from
+      PP->[XS,GMP,PP] to XS[->PP[->GMP]].  ecm_factor is moved out of root.
+      Moved some primality proving logic out of root.
 
 
 0.46  2014-10-21
