--- a/Changes
+++ b/Changes
@@ -7,7 +7,7 @@ Revision history for Perl module Math::Prime::Util
       Rename our internal function to work around it.
 
     - is_power now takes an optional scalar reference third argument which
-      will be set to the root if found.
+      will be set to the root if found.  It also works for negative n.
 
     - AKS is ~20% faster for larger than half-word inputs.
 
