--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl module Math::Prime::Util
 
+0.49  2014-11-30
+
+    - Make versions the same in all packages.
+
 0.48  2014-11-28
 
     [ADDED]
