--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl module Math::Prime::Util
 
+0.50  2014-?
+
+    - Use Axler (2013) bounds for nth_prime_{lower,upper}.
+
+
 0.49  2014-11-30
 
     - Make versions the same in all packages.
