--- a/Changes
+++ b/Changes
@@ -1,8 +1,17 @@
 Revision history for Perl module Math::Prime::Util
 
+0.50 2014-?
+
+    [ADDED]
+
+    - harmfrac(n)               (num,den) of Harmonic number
+    - harmreal(n)               Harmonic number as BigFloat
+
+
 0.49  2014-11-30
 
     - Make versions the same in all packages.
+
 
 0.48  2014-11-28
 
