--- a/TODO
+++ b/TODO
@@ -106,3 +106,5 @@
   * vector
   * string: ("a..b", "-1..-3", "^2", "a..", "b..", "..")
   Also tests, documentation, PP.
+
+- documentation and tests for sqrtint
