--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl module Math::Prime::Util
 
-0.50 2014-?
+0.50 2015-?
 
     [ADDED]
 
@@ -10,7 +10,12 @@ Revision history for Perl module Math::Prime::Util
     - vecextract(\@arr, mask)   Return elements from arr selected by mask
     - ramanujan_primes(lo,hi)   Ramanujan primes R_n in [lo,hi]
 
-    [Misc]
+    [FUNCTIONALITY AND PERFORMANCE]
+
+    - Implement single-base hashed M-R for 32-bit inputs, inspired by
+      Forišek and Jančina 2015 as well as last year's tests with
+      2-base (2^49) and 3-base (2^64) hashed solutions for MPU.  Primality
+      testing is 20-40% faster for this size.
 
     - Changes to nth_prime_{lower,upper}.  They use the Axler (2013) bounds,
       and the XS code will also use inverse prime count bounds for small
