--- a/TODO
+++ b/TODO
@@ -99,13 +99,4 @@
 
 - harmreal and harmfrac for general $k
 
-- finish vecextract.  y can be:
-  * integer (done)
-  * vector
-  * string: ("a..b", "-1..-3", "^2", "a..", "b..", "..")
-  Also tests, documentation, PP, PPFE.
-
-- prime count bounds:
-  * use Axler th 1.2 rather than 1.4 when better.
-  * http://arxiv.org/pdf/1410.7015v1.pdf shows Shoenfeld bounds for x <= 1.4e25
-
+- tests for vecextract and vecreduce.
