--- a/Changes
+++ b/Changes
@@ -9,6 +9,8 @@ Revision history for Perl module Math::Prime::Util
     - sqrtint(n)                Integer square root of n
     - vecextract(\@arr, mask)   Return elements from arr selected by mask
     - ramanujan_primes(lo,hi)   Ramanujan primes R_n in [lo,hi]
+    - nth_ramanujan_prime(n)    the nth Ramanujan prime R_n
+    - is_ramanujan_prime(n)     1 if n is a Ramanujan prime, 0 otherwise
 
     [FUNCTIONALITY AND PERFORMANCE]
 
