New sieve walking method.  forprimes about 35% faster

--- a/TODO
+++ b/TODO
@@ -108,3 +108,5 @@
 - Support FH for print_primes.  PerlIO_write is giving me fits.
 
 - Test for print_primes.  Not as easy with filenos.
+
+- Apply new sieve walking code to all uses.
