--- a/Changes
+++ b/Changes
@@ -7,7 +7,7 @@ Revision history for Perl module Math::Prime::Util
     - Double speed of sum_primes.
 
     - Rewrote some internal sieve-walking code, speeds up next_prime,
-      forprimes, and some others.
+      forprimes, print_primes, and more.
 
     [Misc]
 
