--- a/Changes
+++ b/Changes
@@ -22,6 +22,9 @@ Revision history for Perl module Math::Prime::Util
     - PrimeArray now allows exporting @primes (and a few others), which
       saves some typing.
 
+    - PrimeArray now works for indices up to 2^32-1, after which it silently
+      rolls over.  Previously it worked to 2^31-1 then croaked.
+
     [Misc]
 
     - Check for old MPFR now using C library version, not module version.
